apps/arcs/rho2/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-rho2
  labels:
    rho2.sanctum: "true"
    sage.arc: "true"
    arc.name: "rho2"
