apps/arcs/rho2/base/rho2-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: arc-rho2
  labels: 
    rho2.sanctum: "true"
