apps/arcs/rho2/base/rho2-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rho2-anchor-egress
  namespace: arc-rho2
spec:
  endpointSelector:
    matchLabels:
      app: rho2-anchor
  egress:
    # DNS to kube-dns
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
